upgrade to Ruby 1.9.2

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
 	<p><strong>Copyright &copy; <%= Time.now.year %> Project BluMine</strong></p>
 	<p>
 		<%= link_to t(:get_source_code), 'http://github.com/daqing/blumine/' %> | <%= link_to t(:blog), 'http://blog.xdaqing.com' %> | 
-		<% User::AVAILABLE_LANGUAGES.keys.each do |key| %>
+		<% [:zh, :en].each do |key| %>
 	      <% if I18n.locale == key %>
 	        <span class="current"><%= User::AVAILABLE_LANGUAGES[key] %></span>
 	      <% else %>
